# tt-atom

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  RELEASE.md  RELEASING.md  check_attn_grad.py  check_head_grad.py  check_pet_grad.py  check_pet_trace.py  check_pet_vjp.py  pyproject.toml
.github/workflows/: ci.yml  release.yaml  release.yml
benchmarks/: _profile.py  _profile2.py  bench_batch.py  bench_multicard.py  bench_orb_edge_mlp.py  bench_orb_edge_streaming_floor.py  bench_orb_evaluate_batch.py  bench_orb_layer_profile.py  bench_orb_perf_dollar_tt.py  bench_orb_profile.py  bench_orb_roofline.py  bench_orb_scatter.py  bench_orb_scatter_layout.py  bench_orb_trace.py  bench_throughput.py  bench_trace.py  orb_edge_mlp_profile.json  orb_edge_mlp_profile_fast.json  orb_edge_mlp_profile_fused_bw.json  orb_edge_streaming_floor.json  orb_gpu_bench.py  orb_gpu_bench_fair.py  orb_layer_profile.json  orb_layer_profile_opt.json  orb_minimal_matmul.json  orb_minimal_matmul_e2e_ab.json  orb_perf_dollar_gpu.json  orb_perf_dollar_gpu_v0.5.5_crosscheck.json  orb_perf_dollar_gpu_v0.7.0.json  orb_perf_dollar_tt.json  orb_perf_dollar_tt_accel.json  orb_perf_dollar_tt_analytic_vjp.json  orb_perf_edge_mlp_fused.json  orb_perf_edge_mlp_unfused.json  orb_roofline.json  orb_roofline_analytic_vjp.json  orb_roofline_no_scatter.json  orb_scatter_ablation.json  orb_scatter_e2e_ab.json  plot.py
benchmarks/archive/: README.md  bench_orb_minimal_matmul.py  bench_orb_minimal_matmul_e2e_ab.py  bench_orb_scatter_ab.py  bench_orb_scatter_e2e_ab.py  bench_orb_scatter_internals.py
custom_kernels/: README.md
custom_kernels/fused_rotate/: fused_rotate_nanobind.cpp  sources.cmake
custom_kernels/fused_rotate/device/: fused_rotate_device_operation.cpp  gate_device_operation.cpp  gate_program_factory.cpp  gc_device_operation.cpp  lnbw_device_operation.cpp  lnbw_program_factory.cpp
custom_kernels/fused_rotate/device/kernels/: lnbw_compute.cpp
docs/: install.md  materials-benchmark.md  orb-port.md  perf_baselines.json  pet-mad-port.md  uma-orb-api-decision.md  uma-s-1p2-validation.md
docs/pet-mad-port/: pet_mad_s_base_params.txt  pet_mad_s_statedict_shapes.json
examples/: batch.py  evaluate_batch.py  md.py  model_tiny_demo.npz  orb_md.py  periodic.py  relax.py  relax_cell.py
examples/orb_social/: DRAFT_POST.md  MELT.md  NOTES.md  RELEASE_POST.md  VERIFICATION.md  analyze_melt.py  lattice_check.py  lattice_check.txt  orb_md_device.py  orb_melt_device.py  orb_melt_md.py  orb_melt_parity.py  orb_parity.py  parity.json  plot_melt.py  plot_melt_charts.py  plot_stability.py  render_melt_hud.py  render_melt_video.py  render_ovito.py
scripts/: orb_omol_noise_floor.py  orb_omol_ref_self_consistency.py  release_gate.py  ux_regression.py
tests/: conftest.py  gen_golden.py  gen_golden_batch.py  gen_golden_orb.py  gen_golden_real.py  mirror.py  test_auto.py  test_batch.py  test_calculator.py  test_edgewise.py  test_end2end.py  test_forces.py  test_from_uma.py  test_grid.py  test_model.py  test_multicard.py  test_multicard_orb.py  test_norm.py  test_orb_bf8_fast.py  test_orb_calculator.py  test_orb_direct_realweight.py  test_orb_disjoint_batch.py  test_orb_evaluate_batch.py  test_orb_forces_realweight.py  test_orb_geometry_vjp.py  test_orb_mgo_realweight.py  test_orb_omol_realweight.py  test_orb_periodic_realweight.py  test_orb_realweight.py  test_orb_stress_realweight.py  test_orb_trace.py  test_orb_zbl_forces.py  test_periodic.py  test_pet_calculator.py  test_pet_device.py  test_readme_quickstart.py  test_realweight.py  test_realweight_uma_s_1p2.py  test_so2.py  test_symmetry.py  (+3 more)
tests/data/: golden_bulk_tiny.npz  golden_tiny.npz  pet_mad_s_si_canon_internals.npz  pet_mad_s_si_golden.npz  pet_mad_s_si_internals.npz
tools/: __init__.py  export_orb_weights.py  export_pet_weights.py  export_weights.py  probe_uma_batch.py
tt_atom/: __init__.py  activation.py  ase_base.py  auto.py  batch.py  bundle.py  bundle_cache.py  calculator.py  cli.py  device.py  disjoint.py  edge_degree.py  edgewise.py  forces.py  geometry.py  grid.py  model.py  norm.py  orb_calculator.py  orb_forces.py  orb_geometry.py  orb_model.py  orb_trace.py  orb_weight_cache.py  orb_weights.py  pet_adaptive_cutoff.py  pet_calculator.py  pet_forces.py  pet_geometry.py  pet_model.py  pet_model_host.py  pet_trace.py  pet_vjp.py  pet_weight_cache.py  pet_weights.py  quaternion.py  rotation.py  scatter.py  so2.py  spectral.py  (+2 more)
