[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tt-atom"
version = "0.2.1"
description = "High-performance Tenstorrent inference for UMA (eSEN / eSCN-MD) and Orb-v3 / OrbMol ML interatomic potentials"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Moritz Thüning" }]
keywords = ["tenstorrent", "ttnn", "machine-learning-potential", "eSEN", "eSCN", "UMA", "Orb", "OrbMol", "equivariant", "MLIP"]

# Core runtime deps. ttnn is NOT a pip dependency: Orb can use the stock wheel, while UMA needs
# source tt-metal with ttnn.experimental.fused_rotate (see README "Install"). numpy is pinned <2
# to match ttnn's numpy 1.x C ABI; torch is CPU-only (the model runs on the card).
# `import tt_atom` never imports ttnn, so it imports fine on a machine without a card.
dependencies = [
    "numpy<2",
    "torch>=2.0,<3",
    "ase>=3.26",
]

[project.scripts]
tt-atom = "tt_atom.cli:main"

[project.optional-dependencies]
dev = ["pytest", "matplotlib"]

[project.urls]
Homepage = "https://github.com/moritztng/tt-atom"

[tool.setuptools.packages.find]
include = ["tt_atom*", "tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
